k8s/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickup-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - clickup.48-218-233-16.nip.io
      secretName: clickup-tls
  rules:
    - host: clickup.48-218-233-16.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickup-web
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: clickup-api
                port:
                  number: 3000
